--- a/opdracht3/package.json
+++ b/opdracht3/package.json
@@ -9,15 +9,19 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "vue": "^2.6.11"
   },
   "devDependencies": {
+    "@tailwindcss/postcss7-compat": "^2.0.3",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "autoprefixer": "^9",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "postcss": "^7",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
